--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
         "preview": "vite preview --port 5050"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "axios": "^0.26.1",
+        "bootstrap": "^5.1.3",
+        "moment": "^2.29.3",
         "vue": "^3.2.31",
-        "vue-router": "^4.0.14"
+        "vue-router": "^4.0.14",
+        "vue-sweetalert2": "^5.0.2",
+        "vuex": "^4.0.2",
+        "vuex-persistedstate": "^4.1.0"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.1",
