--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "@popperjs/core": "^2.11.5",
         "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
+        "express": "^4.18.0",
         "moment": "^2.29.3",
+        "serve-static": "^1.15.0",
         "vue": "^3.2.31",
         "vue-router": "^4.0.14",
         "vue-sweetalert2": "^5.0.2",
