--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VUE_API_URL=http://localhost:8080/api/auth/
+#VITE_API_ENDPOINT=https://menu-digital-api.herokuapp.com/api/v1
+#VITE_API_URL=https://menu-digital-api.herokuapp.com
+VITE_API_ENDPOINT=http://localhost:5000/api/v1
+VITE_API_URL=http://localhost:5000
